doc/114: Fixed the Javadoc Plugin warnings in the next Java build